<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4d5139">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:stretchColumns="1"
        android:id="@+id/tableLayout1">
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bookName"
                android:textSize="30sp"
                android:textColor="@color/white"
                />
            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/addBookName"
                android:textSize="20sp"
                android:textColor="@color/lime"
                android:textColorHint="@color/white"
                android:hint="@string/bookNameHint"
                android:gravity="center"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/author"
                android:textSize="30sp"
                android:textColor="@color/white"
                />
            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/addAuthorName"
                android:textSize="20sp"
                android:textColor="@color/lime"
                android:textColorHint="@color/white"
                android:hint="@string/authorHint"
                android:gravity="center"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pages"
                android:textSize="30sp"
                android:textColor="@color/white"
                />
            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/addPages"
                android:textSize="20sp"
                android:textColor="@color/lime"
                android:textColorHint="@color/white"
                android:hint="@string/pagesHint"
                android:inputType="number"
                android:gravity="center"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/price"
                android:textSize="30sp"
                android:textColor="@color/white"
                />
            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/addPrice"
                android:textSize="20sp"
                android:textColor="@color/lime"
                android:textColorHint="@color/white"
                android:inputType="number"
                android:hint="@string/priceHint"
                android:gravity="center"
                />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/addBookVerifyButton"
        android:text="@string/addBookVerify"
        android:textSize="30sp"
        android:textColor="@color/green"
        android:background="@color/orange"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addBookVerifyButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/resetBookButton"
        android:text="@string/resetBook"
        android:textSize="30sp"
        android:textColor="@color/yellow"
        android:background="@color/red"/>

</RelativeLayout>
