<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0c4842">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginText"
        android:gravity="center"
        android:text="@string/loginText"
        android:textSize="25sp"
        android:textColor="#ffb11b"
        android:layout_marginTop="50dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/loginText"
        android:layout_marginTop="20dp"
        android:id="@+id/accountImage"
        android:background="@drawable/login"
        android:layout_centerHorizontal="true"
        />
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountImage"
        android:stretchColumns="1"
        android:id="@+id/tableLayout3">
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/account"
                android:text="@string/account"
                android:textSize="25sp"
                android:textColor="#c7802d"/>
            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/editAccount"
                android:textSize="20sp"
                android:textColor="#c7802d"
                android:textColorHint="@color/white"
                android:hint="@string/editAccount"
                android:gravity="center"
                android:inputType="text"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:text="@string/password"
                android:textSize="25sp"
                android:textColor="#c7802d"/>
            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/editPassword"
                android:textSize="20sp"
                android:textColor="#c7802d"
                android:textColorHint="@color/white"
                android:hint="@string/editPassword"
                android:gravity="center"
                android:inputType="textPassword"/>
        </TableRow>
    </TableLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tableLayout3"
        android:layout_marginTop="10dp"
        android:id="@+id/checkBox1"
        android:text="@string/saveAccount"
        android:textSize="15sp"
        android:textColor="#c7802d" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_toEndOf="@id/checkBox1"
        android:layout_below="@id/tableLayout3"
        android:background="@color/chartreuse"
        android:text="@string/login"
        android:textSize="30sp"
        android:textColor="@color/white"/>


</RelativeLayout>
