<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueviolet">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/text1"
        android:text="@string/text1"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:gravity="center"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/addButton"
        android:text="@string/addButton"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:background="@color/lime"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deleteButton"
        android:layout_below="@id/addButton"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/deleteButton"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:background="@color/goldenrod"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/updateButton"
        android:layout_below="@id/deleteButton"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@color/greenyellow"
        android:text="@string/updateButton"
        android:textSize="30sp"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/queryButton"
        android:layout_below="@id/updateButton"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@color/green"
        android:text="@string/queryData"
        android:textColor="@color/white"
        android:textSize="30dp"/>
    
</RelativeLayout>
