<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/burlywood">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/hintText"
        android:text="@string/text2"
        android:textSize="20sp"
        android:textColor="@color/blueviolet"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hintText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:id="@+id/searchBookName"
        android:textColor="@color/blue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchBookName"
        android:layout_marginTop="10dp"
        android:id="@+id/hintText2"
        android:gravity="center"
        android:text="@string/text3"
        android:textSize="20sp"
        android:textColor="@color/blueviolet"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hintText2"
        android:layout_marginTop="10dp"
        android:stretchColumns="1"
        android:id="@+id/tableLayout2">
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/bookName"
                android:textSize="25sp"
                android:textColor="@color/blue"/>
            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/changeBookName"
                android:textSize="25sp"
                android:textColor="@color/steelblue"
                android:gravity="center"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="25sp"
                android:textColor="@color/blue"/>
            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/changeAuthorName"
                android:textSize="25sp"
                android:textColor="@color/steelblue"
                android:gravity="center"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/pages"
                android:textSize="25sp"
                android:textColor="@color/blue"/>
            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/changePages"
                android:textSize="25sp"
                android:textColor="@color/steelblue"
                android:gravity="center"
                android:inputType="number"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="25sp"
                android:textColor="@color/blue"/>
            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/changePrice"
                android:textSize="25sp"
                android:textColor="@color/steelblue"
                android:gravity="center"
                android:inputType="number"/>
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/updateVerifyButton"
        android:layout_below="@id/tableLayout2"
        android:layout_marginTop="10dp"
        android:background="@color/dodgerblue"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/changButton"
        android:textSize="30sp"
        android:textColor="@color/white"/>
</RelativeLayout>
